--- a/src/components/TodoList/TodoList.css
+++ b/src/components/TodoList/TodoList.css
@@ -19,3 +19,12 @@
     color: brown;
     text-decoration: line-through;
 }
+
+.filter {
+    display: flex;
+    justify-content: center;
+}
+
+.btns {
+    margin-top: 24px;
+}
